// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dateInputField > should clear field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_74_"
          aria-describedby="_r_74_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_75_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value=""
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617m-.808 2.962a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M10.423 8a.807.807 0 1 0 0 1.615.807.807 0 0 0 0-1.615m-3.231.808a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M8 10.154a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.5 1a.81.81 0 0 0-.808.808v1.346c-1.19 0-2.153.964-2.153 2.154v7.538c0 1.19.964 2.154 2.153 2.154h8.616c1.19 0 2.154-.964 2.154-2.154V5.308c0-1.19-.965-2.154-2.154-2.154V1.808a.808.808 0 1 0-1.616 0v1.346H5.308V1.808A.81.81 0 0 0 4.5 1M3.154 7.462c0-.595.482-1.077 1.077-1.077h7.538c.595 0 1.077.482 1.077 1.077v4.846c0 .595-.482 1.077-1.077 1.077H4.231a1.077 1.077 0 0 1-1.077-1.077z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="uv_9rlyg93 uv_9rlyg91 uv_w40vpo4"
            id="_r_74_"
            role="dialog"
            style="--uv_ozfz3c0: -5px; --uv_ozfz3c1: 0px; --uv_ozfz3c2: rotate(180deg); --uv_ozfz3c4: translate3d(0px, 4px, 0); --uv_ozfz3c5: 0ms; --uv_ozfz3c6: translate3d(0px, 4px, 0); --uv_ozfz3c7: 16.5rem; opacity: 1;"
          >
            <div
              class="uv_w40vpo2"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d uv_toi52u3v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u2j uv_toi52u77"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeh uv_e1wcoej uv_e1wcoe19"
                    data-testid="previous-month"
                    type="button"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowLeftIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <span
                    class="uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    September 2022
                  </span>
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeh uv_e1wcoej uv_e1wcoe19"
                    data-testid="next-month"
                    type="button"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowRightIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="uv_x6hyh50 uv_x6hyh52j"
                  style="--uv_3mg8xe0: repeat(7, 1fr); --uv_3mg8xe1: repeat(7, 1fr); --uv_3mg8xe2: repeat(7, 1fr); --uv_3mg8xe3: repeat(7, 1fr); --uv_3mg8xe4: repeat(7, 1fr); --uv_3mg8xe5: repeat(7, 1fr);"
                >
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Mo
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Tu
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    We
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Th
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Fr
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Sa
                  </p>
                  <p
                    class="uv_705z6f1 uv_705z6f0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Su
                  </p>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    31
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    9
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    10
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    11
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    12
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    13
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    14
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    15
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    16
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    17
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    18
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    19
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    20
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    21
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    22
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    23
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    24
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    25
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    26
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    27
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    28
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="neutral"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="not-current"
                    class="uv_705z6f2 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoee uv_e1wcoej uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    9
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_1_"
                name="test"
                type="text"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617m-.808 2.962a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M10.423 8a.807.807 0 1 0 0 1.615.807.807 0 0 0 0-1.615m-3.231.808a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M8 10.154a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.5 1a.81.81 0 0 0-.808.808v1.346c-1.19 0-2.153.964-2.153 2.154v7.538c0 1.19.964 2.154 2.153 2.154h8.616c1.19 0 2.154-.964 2.154-2.154V5.308c0-1.19-.965-2.154-2.154-2.154V1.808a.808.808 0 1 0-1.616 0v1.346H5.308V1.808A.81.81 0 0 0 4.5 1M3.154 7.462c0-.595.482-1.077 1.077-1.077h7.538c.595 0 1.077.482 1.077 1.077v4.846c0 .595-.482 1.077-1.077 1.077H4.231a1.077 1.077 0 0 1-1.077-1.077z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_5_"
          aria-describedby="_r_5_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="true"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                disabled=""
                id="_r_6_"
                name="test"
                type="text"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1a"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617m-.808 2.962a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M10.423 8a.807.807 0 1 0 0 1.615.807.807 0 0 0 0-1.615m-3.231.808a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M8 10.154a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.5 1a.81.81 0 0 0-.808.808v1.346c-1.19 0-2.153.964-2.153 2.154v7.538c0 1.19.964 2.154 2.153 2.154h8.616c1.19 0 2.154-.964 2.154-2.154V5.308c0-1.19-.965-2.154-2.154-2.154V1.808a.808.808 0 1 0-1.616 0v1.346H5.308V1.808A.81.81 0 0 0 4.5 1M3.154 7.462c0-.595.482-1.077 1.077-1.077h7.538c.595 0 1.077.482 1.077 1.077v4.846c0 .595-.482 1.077-1.077 1.077H4.231a1.077 1.077 0 0 1-1.077-1.077z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should test range 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_3n_"
          aria-describedby="_r_3n_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_3o_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value="9/15/2022 - 9/18/2022"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617m-.808 2.962a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M10.423 8a.807.807 0 1 0 0 1.615.807.807 0 0 0 0-1.615m-3.231.808a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M8 10.154a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.5 1a.81.81 0 0 0-.808.808v1.346c-1.19 0-2.153.964-2.153 2.154v7.538c0 1.19.964 2.154 2.153 2.154h8.616c1.19 0 2.154-.964 2.154-2.154V5.308c0-1.19-.965-2.154-2.154-2.154V1.808a.808.808 0 1 0-1.616 0v1.346H5.308V1.808A.81.81 0 0 0 4.5 1M3.154 7.462c0-.595.482-1.077 1.077-1.077h7.538c.595 0 1.077.482 1.077 1.077v4.846c0 .595-.482 1.077-1.077 1.077H4.231a1.077 1.077 0 0 1-1.077-1.077z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_9rlyg90"
      >
        <div
          aria-controls="_r_a_"
          aria-describedby="_r_a_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              class="uv_q3q8048 uv_q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="false"
                class="uv_q3q8049"
                data-size="large"
                id="_r_b_"
                name="test"
                placeholder="YYYY-MM-DD"
                type="text"
                value="9/15/2022"
              />
              <div
                class="uv_q3q8043 uv_toi52u0 uv_toi52ud uv_toi52u2j"
                data-size="large"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CalendarRangeIcon
                  </title>
                  <path
                    d="M5.577 8a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617m-.808 2.962a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M10.423 8a.807.807 0 1 0 0 1.615.807.807 0 0 0 0-1.615m-3.231.808a.808.808 0 1 1 1.617 0 .808.808 0 0 1-1.617 0M8 10.154a.808.808 0 1 0 0 1.617.808.808 0 0 0 0-1.617"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M4.5 1a.81.81 0 0 0-.808.808v1.346c-1.19 0-2.153.964-2.153 2.154v7.538c0 1.19.964 2.154 2.153 2.154h8.616c1.19 0 2.154-.964 2.154-2.154V5.308c0-1.19-.965-2.154-2.154-2.154V1.808a.808.808 0 1 0-1.616 0v1.346H5.308V1.808A.81.81 0 0 0 4.5 1M3.154 7.462c0-.595.482-1.077 1.077-1.077h7.538c.595 0 1.077.482 1.077 1.077v4.846c0 .595-.482 1.077-1.077 1.077H4.231a1.077 1.077 0 0 1-1.077-1.077z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
